# neural-arm-field-planner

./: CMakeLists.txt  README.md  package.xml  setup.py
env/: genesis_ros_env.yaml  ros_perception_env.yaml
launch/: ik_genesis.launch
scripts/: IK_genesis.py  IK_ompl.py  IK_pmaf.py  basic_IK.py  deviate_wall.py  multilink_IK_ompl.py
src/: compute_cam2base.py  default_position.yaml  display_trajectory.py  ee_pos_log_success.yaml  move_to_goal.py  move_to_start.py  trajectory_log_success.yaml
src/apriltag_ros/: tf_homogeneous.yaml
src/apriltag_ros/apriltag_ros/: CMakeLists.txt  package.xml
src/apriltag_ros/apriltag_ros/config/: tags.yaml
src/apriltag_ros/apriltag_ros/launch/: continuous_detection.launch  save_tf_homogeneous.launch
src/apriltag_ros/apriltag_ros/scripts/: save_tf_homogeneous.py
src/dataset_generator/: CMakeLists.txt  package.xml
src/dataset_generator/data/: labels.csv
src/dataset_generator/data/scene_configs/: scene_1.yaml  scene_10.yaml  scene_2.yaml  scene_3.yaml  scene_4.yaml  scene_5.yaml  scene_6.yaml  scene_7.yaml  scene_8.yaml  scene_9.yaml
src/dataset_generator/launch/: generate_labels.launch
src/dataset_generator/scripts/: create_scenes.py  generate_labels.py
src/genesis_inverse_kinematics/: CMakeLists.txt  package.xml
src/genesis_inverse_kinematics/eval_costs/5_trials/predefined/: cost_log.txt
src/genesis_inverse_kinematics/eval_costs/base_scene/10_trials/optimal/: cost_log.txt
src/genesis_inverse_kinematics/eval_costs/base_scene/10_trials/predefined/: cost_log.txt
src/genesis_inverse_kinematics/eval_costs/optimal/: cost_log.txt
src/genesis_inverse_kinematics/eval_costs/predefined/: cost_log.txt
src/genesis_inverse_kinematics/eval_costs/scene_14/optimal/: cost_log.txt
src/genesis_inverse_kinematics/launch/: ik_genesis.launch
src/genesis_inverse_kinematics/scene/: base_scene.yaml  scene_1.yaml  scene_2.yaml
src/genesis_inverse_kinematics/scripts/: IK_ompl.py  IK_pmaf.py  deviate_wall.py  multilink_IK_pmaf.py  robot_controller.py
src/genesis_inverse_kinematics/src/genesis_inverse_kinematics/: evaluate_path.py  perception_utils.py  static_transform_publisher.py  task_setup.py
src/multi_agent_vector_fields/: package.xml
src/multi_agent_vector_fields/config/: agent_parameters.yaml  agent_parameters_temp.yaml  obstacles_1.yaml  obstacles_2.yaml  start_goal.yaml
src/multi_agent_vector_fields/include/multi_agent_vector_fields/: cf_agent.h  cf_manager.h
src/multi_agent_vector_fields/launch/: main_demo.launch
src/multi_agent_vector_fields/src/: cf_agent.cpp  cf_manager.cpp  main.cpp
src/octomap_generator/: CMakeLists.txt  package.xml
src/octomap_generator/launch/: depth_to_ptcloud.launch  publish_depth_image.launch
src/octomap_generator/scripts/: publish_depth_image.py
src/percept/: CMakeLists.txt  package.xml
src/percept/config/: sim_pipeline_conf.yaml
src/percept/launch/: depth_to_ptcloud.launch  depth_to_ptcloud_real.launch  realsense.launch  sim_static.launch  static_depth.launch
src/percept/rviz/: perception.rviz
src/percept/src/: perception_node.py  perception_pipeline.py  sim_pipeline.py  static_depth_publisher.py
src/percept/src/utils/: camera_helpers.py
src/planner_optimizer/: CMakeLists.txt  package.xml
src/planner_optimizer/launch/: bayesian_optimizer.launch
src/planner_optimizer/results/: best_parameters.yaml
src/planner_optimizer/results/gp/: best_parameters.yaml
src/planner_optimizer/results/rf/: best_parameters_16_it.yaml  best_parameters_20_it.yaml
src/planner_optimizer/results/svgp/no_time_limit/: best_parameters.yaml
src/planner_optimizer/results/svgp/time_limit/: best_parameters.yaml
src/planner_optimizer/scripts/: bayesian_optimizer.py  hebo_example.py
src/point_net/: CMakeLists.txt  package.xml  pointnet_pp.ipynb  setup.py
src/point_net/launch/: full_pipeline.launch  real_robot_pipeline.launch
src/point_net/scripts/: full_pipeline.py  real_robot_pipeline.py
src/point_net/src/point_net/: dataset.py  infer_gains.py  model.py
src/trajectory_planning_genesis/: task_setup.py
