<?xml version="1.0"?>
<package format="2">
  <name>dataset_generator</name>
  <version>0.0.0</version>
  <description>The dataset generator package</description>

  <maintainer email="mateusbonelli3@gmail.com">Mateus Salomao</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>

  <exec_depend>python3</exec_depend>

</package>
