<package format="2">
  <name>octomap_generator</name>
  <version>0.0.1</version>
  <description>The octomap_generator package</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>sensor_msgs</depend>

  <build_depend>rospy</build_depend>
  <exec_depend>rospy</exec_depend>

  <export>
  </export>
</package>