<?xml version="1.0"?>
<package format="2">
  <name>point_net</name>
  <version>0.0.0</version>
  <description>The point_net package</description>

  <maintainer email="your_email@domain.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>

  <exec_depend>python3</exec_depend>

</package>
